[package]
name = "ack-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
redb = "2.2.0"
serde = { version = "1", features = ["derive"], default-features = false }
ntex = { version = "2.0", features = ["tokio"]}
serde_json = { version = "1", default-features = false }
env_logger = "0.11.5"
log = "0.4.22"
ntex-prometheus = "0.1.0"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]


[profile.release]
# opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
strip = true      # Automatically strip symbols from the binary.

